1/1.09/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp2-svc
spec:
  type: ClusterIP
  selector:
    app: myapp2
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
